[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MLHUtilityShutoffPreventionLetter"
version = "1.0"
description = "Utility Shutoff Prevention Letter"
readme = "README.md"
authors = [
    { name = "Mark Marotta", email = "mark.marotta@su.suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
